--- a/resources/sass/phone/_variables.scss
+++ b/resources/sass/phone/_variables.scss
@@ -1,10 +1,12 @@
 /* global variables */
 
-$base-text-color: #303030; 				//	1. Headlines and primary texts
-$base-bg-color: #ffffff;				//	2. Article background
-$article-border-color: #dddddd;			//	3. Article border
-$extra-text-color: #636363;				//	4. Secondary texts
-$category-color: #54b103;				//	5. Category label	
-$buttons-bg-color: #fafafa;				//	6. Buttons background
-$buttons-color: #747474;				//	7. Buttons icon
-$actions-panel-color: #efefef;			//	8. Menu
+$light-orange: #fc921a;
+$orange: #ee7f00;
+$dark-orange: #e64415;
+$blue: #5389c2;
+$light-blue: #7caad6;
+$dark-grey: #373737;
+$grey: #414141;
+$light-grey: #979696;
+$purple: #6e5f68;
+
