--- a/resources/themes/phone/core/_core.scss
+++ b/resources/themes/phone/core/_core.scss
@@ -43,11 +43,40 @@
 }
 .main-mask{
 	background: rgba(0,0,0,0.6);
-	width:100%;
-	height:100%;
+	width: 100%;
+	height: 100%;
 }
 #mainBackground{
 	.x-innerhtml{
 		height: 100%;
+	}
+}
+.hbox{
+	@include wbz-display-box();
+	@include wbz-box-orient(horizontal);
+	@include wbz-box-pack(justify);
+	@include wbz-box-align(stretch);
+}
+.vbox{
+	@include wbz-display-box();
+	@include wbz-box-orient(vertical);
+	@include wbz-box-pack(justify);
+	@include wbz-box-align(stretch);
+}
+.flex{
+	@include wbz-display-box();
+	@include wbz-box-flex(1);
+}
+.actions-panel-button{
+	.menu{
+		@include wbz-inline-icon(menu, 30px);
+		color: $purple;
+		width: 60px;
+		height: 60px;
+		line-height: 60px;
+		
+		&::before{
+			line-height: 60px;
+		}
 	}
 }
