--- a/resources/themes/phone/modules/_cover.scss
+++ b/resources/themes/phone/modules/_cover.scss
@@ -40,6 +40,37 @@
 		margin: 15px auto;
 	}
 	.footer{
-		background: rgba(255,255,255,0.9);
+		background: rgba(255,255,255,0.8);
+		
+		.logos{
+			width: 295px;
+			margin: 0 auto;
+		}
+		.logo-ing{
+			background-image: wbz_theme_image("phone/logo-ing.png");
+			background-size: contain;
+			background-repeat: no-repeat;
+			width: 295px;	
+			height: 26px;
+			margin: 20px 0 0 0;
+		}
+		.logo-mai-mult-verde{
+			background-image: wbz_theme_image("phone/logo-mai-mult-verde.png");
+			background-size: contain;
+			background-repeat: no-repeat;
+			width: 192px;	
+			height: 47px;
+			float: left;
+			margin: 15px 0 0 10px;
+		}
+		.logo-smurd{
+			background-image: wbz_theme_image("phone/logo-smurd.png");
+			background-size: contain;
+			background-repeat: no-repeat;
+			width: 55px;	
+			height: 54px;
+			float: right;
+			margin: 15px 10px 0 0;
+		}
 	}
 }
