--- a/resources/sass/phone/_all.scss
+++ b/resources/sass/phone/_all.scss
@@ -16,7 +16,7 @@
 /**********************************************************************************************************************/
 
 @import '../../themes/phone/modules/cover';
-
+@import '../../themes/phone/modules/categories';
 
 /**********************************************************************************************************************/
 /*
