--- a/resources/themes/phone/mixins/_icon.scss
+++ b/resources/themes/phone/mixins/_icon.scss
@@ -54,6 +54,7 @@
 	@else if ($name == "star") { @return "\40"; }
 	@else if ($name == "star-filled") { @return "\41"; }
 	@else if ($name == "twitter") { @return "\42"; }
+	@else if ($name == "delete") { @return "\43"; }
 
 	
     @else {
