--- a/resources/css/phone/phone.css
+++ b/resources/css/phone/phone.css
@@ -7820,6 +7820,19 @@ html, body {
   align-items: center;
 }
 
+/* line 37, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
+.x-list-normal .x-list-item {
+  width: auto;
+}
+/* line 40, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
+.x-list-normal .x-list-item.x-list-item-tpl {
+  border: 0px;
+}
+/* line 43, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
+.x-list-normal .x-list-item.x-list-item-tpl.x-list-footer-wrap {
+  border: 0px;
+}
+
 /**********************************************************************************************************************/
 /*
 /* IMPORT MODULES
@@ -8088,6 +8101,39 @@ html, body {
   font-size: 20px !important;
   font-weight: normal!important;
   content: "\43";
+}
+/* line 44, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.categories-list .x-list-item.x-list-item-tpl .x-innerhtml .categories-box {
+  background: rgba(255, 255, 255, 0.7);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: box;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  box-orient: vertical;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
+  box-align: stretch;
+  align-items: stretch;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  box-pack: justify;
+  justify-content: space-between;
+}
+/* line 51, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.categories-list .x-list-item.x-list-item-tpl .x-innerhtml .categories-box .img {
+  text-align: center;
+  background-size: contain;
+  background-position: center center;
+}
+/* line 56, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.categories-list .x-list-item.x-list-item-tpl .x-innerhtml .categories-box p {
+  font-size: 12px;
+  text-align: center;
+  padding: 5px 10px;
 }
 
 /**********************************************************************************************************************/
