--- a/resources/css/phone/phone.css
+++ b/resources/css/phone/phone.css
@@ -8113,35 +8113,20 @@ html, body {
 /* line 44, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
 .categories-list .x-list-item.x-list-item-tpl .x-innerhtml .categories-box {
   background: rgba(255, 255, 255, 0.7);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  display: box;
-  -webkit-box-orient: vertical;
-  -moz-box-orient: vertical;
-  box-orient: vertical;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: stretch;
-  -ms-flex-align: stretch;
-  box-align: stretch;
-  align-items: stretch;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  box-pack: justify;
-  justify-content: space-between;
 }
-/* line 51, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+/* line 47, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
 .categories-list .x-list-item.x-list-item-tpl .x-innerhtml .categories-box .img {
   text-align: center;
   background-size: contain;
   background-position: center center;
+  background-repeat: no-repeat;
 }
-/* line 57, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+/* line 54, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
 .categories-list .x-list-item.x-list-item-tpl .x-innerhtml p {
   font-size: 12px;
   text-align: center;
   padding: 5px 10px;
+  line-height: 13px;
 }
 
 /**********************************************************************************************************************/
