--- a/resources/themes/phone/modules/_categories.scss
+++ b/resources/themes/phone/modules/_categories.scss
@@ -48,12 +48,14 @@
 						text-align: center;
 						background-size: contain;
 						background-position: center center;
+						background-repeat: no-repeat;
 					}
 				}
 				p{
 					font-size: 12px;
 					text-align: center;
 					padding: 5px 10px; 
+					line-height: 13px;
 				}
 			}
 		}
