--- a/resources/themes/phone/modules/_categories.scss
+++ b/resources/themes/phone/modules/_categories.scss
@@ -58,7 +58,7 @@
 					@include wbz-box-pack(center);
 					font-size: 12px;
 					text-align: center;
-					padding: 5px 10px; 
+					padding: 0px 10px 5px 10px; 
 					line-height: 13px;
 					height: 36px;
 				}
