--- a/resources/sass/phone/_all.scss
+++ b/resources/sass/phone/_all.scss
@@ -17,6 +17,7 @@
 
 @import '../../themes/phone/modules/cover';
 @import '../../themes/phone/modules/categories';
+@import '../../themes/phone/modules/actions';
 
 /**********************************************************************************************************************/
 /*
