--- a/resources/css/phone/phone.css
+++ b/resources/css/phone/phone.css
@@ -8146,6 +8146,173 @@ html, body {
   height: 36px;
 }
 
+/* line 2, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_actions.scss */
+.actions-list .x-dock {
+  background: #414141;
+}
+/* line 8, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_actions.scss */
+.actions-list .x-dock .x-dock-body .x-list-item .x-innerhtml .item-box {
+  width: 100%;
+  height: 100%;
+  padding: 10px 5px 5px 5px;
+  border: 1px solid #7caad6;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_actions.scss */
+.actions-list .x-dock .x-dock-body .x-list-item .x-innerhtml .item-box .icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: box;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  box-pack: center;
+  justify-content: center;
+  color: #7caad6;
+}
+/* line 20, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_actions.scss */
+.actions-list .x-dock .x-dock-body .x-list-item .x-innerhtml .item-box .icon::before {
+  width: 35px;
+  height: 35px;
+  line-height: 35px;
+  position: relative!important;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.actions-list .x-dock .x-dock-body .x-list-item .x-innerhtml .item-box .icon.call:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 30px !important;
+  font-weight: normal!important;
+  content: "\35";
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.actions-list .x-dock .x-dock-body .x-list-item .x-innerhtml .item-box .icon.video:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 30px !important;
+  font-weight: normal!important;
+  content: "\36";
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.actions-list .x-dock .x-dock-body .x-list-item .x-innerhtml .item-box .icon.map:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 30px !important;
+  font-weight: normal!important;
+  content: "\31";
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.actions-list .x-dock .x-dock-body .x-list-item .x-innerhtml .item-box .icon.comment:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 30px !important;
+  font-weight: normal!important;
+  content: "\23";
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.actions-list .x-dock .x-dock-body .x-list-item .x-innerhtml .item-box .icon.share:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 30px !important;
+  font-weight: normal!important;
+  content: "\39";
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.actions-list .x-dock .x-dock-body .x-list-item .x-innerhtml .item-box .icon.settings:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 30px !important;
+  font-weight: normal!important;
+  content: "\22";
+}
+/* line 45, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_actions.scss */
+.actions-list .x-dock .x-dock-body .x-list-item .x-innerhtml .item-box .title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: box;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  box-pack: center;
+  justify-content: center;
+  color: #7caad6;
+  font-family: "opensans-light";
+  font-size: 14px;
+  line-height: 15px;
+  height: 40px;
+  text-align: center;
+}
+/* line 61, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_actions.scss */
+.actions-list .menu-bar {
+  border-bottom: 1px solid #504f4f;
+  background: #373737;
+}
+/* line 66, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_actions.scss */
+.actions-list .menu-bar .x-body .x-title {
+  font-size: 17px;
+}
+/* line 70, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_actions.scss */
+.actions-list .menu-bar .back-btn {
+  background: none;
+  border: 0px;
+}
+/* line 74, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_actions.scss */
+.actions-list .menu-bar .back-btn .back {
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.actions-list .menu-bar .back-btn .back:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 20px !important;
+  font-weight: normal!important;
+  content: "\28";
+}
+
 /**********************************************************************************************************************/
 /*
 /* IMPORT WIDGETS 
