--- a/resources/themes/phone/widgets/_loader.scss
+++ b/resources/themes/phone/widgets/_loader.scss
@@ -2,7 +2,7 @@
 $spinner-box-size:70px;
 $spinner-size:30px;
 $ball-size:5px;
-$ball-color:#d61673;
+$ball-color: $dark-orange;
 $loader-duration:11s;
 $loader-delay:480ms;  /*  5.5s -> 240ms */ 
 
