--- a/resources/css/phone/phone.css
+++ b/resources/css/phone/phone.css
@@ -7749,6 +7749,31 @@ body.x-desktop {
   line-height: 60px;
 }
 
+/* line 84, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_core.scss */
+.close-button .close {
+  color: #7caad6;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.close-button .close:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 20px !important;
+  font-weight: normal!important;
+  content: "\25";
+}
+/* line 91, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_core.scss */
+.close-button .close::before {
+  line-height: 60px;
+}
+
 /* line 1, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
 html, body {
   background: #979696 !important;
@@ -8146,6 +8171,185 @@ html, body {
   height: 36px;
 }
 
+/* line 69, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.category-panel {
+  background: #ffffff;
+}
+/* line 72, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.category-panel .x-innerhtml {
+  border-bottom: 1px solid #d9e0f0;
+}
+/* line 75, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.category-panel .category-image {
+  background: #d9e0f0;
+}
+/* line 78, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.category-panel .category-image .image-container {
+  height: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  box-pack: end;
+  justify-content: flex-end;
+}
+/* line 85, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.category-panel .category-image .image-container .headline {
+  background: -webkit-linear-gradient(bottom, #ffffff, rgba(255, 255, 255, 0.8) 70%, rgba(255, 255, 255, 0.7));
+  background: -moz-linear-gradient(bottom, #ffffff, rgba(255, 255, 255, 0.8) 70%, rgba(255, 255, 255, 0.7));
+  background: -o-linear-gradient(bottom, #ffffff, rgba(255, 255, 255, 0.8) 70%, rgba(255, 255, 255, 0.7));
+  background: -ms-linear-gradient(bottom, #ffffff, rgba(255, 255, 255, 0.8) 70%, rgba(255, 255, 255, 0.7));
+  background: linear-gradient(bottom, #ffffff, rgba(255, 255, 255, 0.8) 70%, rgba(255, 255, 255, 0.7));
+  background: -ms-linear-gradient(bottom, white 0%, rgba(255, 255, 255, 0.8) 70%, rgba(255, 255, 255, 0.7));
+  /* IE10+ */
+}
+/* line 89, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.category-panel .category-image .image-container .headline h1 {
+  font-size: 20px;
+  line-height: 26px;
+  color: #373737;
+  padding: 15px 20px 5px 20px;
+}
+/* line 98, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.category-panel .content {
+  padding: 15px 0 0 0;
+  margin: 0 20px 20px 20px;
+  border-top: 1px solid #d9e0f0;
+}
+/* line 103, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.category-panel .content p {
+  font-size: 14px;
+  line-height: 18px;
+  color: #373737;
+}
+
+/* line 110, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.articles-list {
+  margin: 2px 0 0 0;
+}
+/* line 113, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.articles-list .articles-bar {
+  background: #e64415;
+}
+/* line 116, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.articles-list .articles-bar .x-innerhtml {
+  color: #ffffff;
+  font-size: 17px;
+  height: 30px;
+  line-height: 30px;
+  padding: 0 20px;
+}
+/* line 124, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.articles-list .x-list-item {
+  border-bottom: 1px solid #d9e0f0;
+}
+/* line 127, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.articles-list .x-list-item.x-list-item-tpl {
+  height: 60px;
+}
+/* line 130, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.articles-list .x-list-item.x-list-item-tpl .x-innerhtml {
+  padding: 0 50px 0 20px;
+  height: 100%;
+}
+/* line 134, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.articles-list .x-list-item.x-list-item-tpl .x-innerhtml > div {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  box-pack: center;
+  justify-content: center;
+}
+/* line 140, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.articles-list .x-list-item .x-innerhtml h1 {
+  color: #5389c2;
+  font-size: 16px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: block;
+}
+/* line 151, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.articles-list.x-list .x-list-disclosure {
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  transform: rotate(180deg);
+  background: none;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.articles-list.x-list .x-list-disclosure:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 20px !important;
+  font-weight: normal!important;
+  content: "\28";
+}
+/* line 156, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.articles-list.x-list .x-list-disclosure::before {
+  color: #979696;
+}
+/* line 161, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.articles-list .comments {
+  color: #979696;
+  width: 18px;
+  height: 18px;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.articles-list .comments:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 18px !important;
+  font-weight: normal!important;
+  content: "\24";
+}
+/* line 167, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.articles-list .comments::before {
+  line-heigth: 18px;
+}
+/* line 170, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.articles-list .comments span {
+  font-size: 13px;
+  color: #979696;
+}
+/* line 175, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.articles-list .ranking {
+  color: #979696;
+  width: 18px;
+  height: 18px;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.articles-list .ranking:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 18px !important;
+  font-weight: normal!important;
+  content: "\40";
+}
+/* line 181, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.articles-list .ranking::before {
+  line-heigth: 18px;
+}
+/* line 184, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_categories.scss */
+.articles-list .ranking span {
+  font-size: 13px;
+  color: #979696;
+}
+
 /* line 2, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_actions.scss */
 .actions-list .x-dock {
   background: #414141;
@@ -8386,7 +8590,7 @@ html, body {
   width: 5px;
   height: 5px;
   border-radius: 5px;
-  background: #d61673;
+  background: #e64415;
 }
 /* line 69, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/widgets/_loader.scss */
 .loader .circle:nth-child(2) {
