--- a/resources/themes/phone/modules/_categories.scss
+++ b/resources/themes/phone/modules/_categories.scss
@@ -75,24 +75,37 @@
 	.category-image{
 		background: #d9e0f0;
 		
+		.container{
+			position: relative; 
+			width: 100%; 
+			height: 100%;
+			@include wbz-box-pack(end);
+			
+			div:first-child{
+				position: absolute; 
+				left: 0; 
+				top: 0; 
+				padding: 10px 15px; 
+				width: 100%; 
+				height: 100%;
+			}	
+		}
+		.headline{
+			@include background(linear-gradient(bottom, rgba(255,255,255, 1), rgba(255,255,255, 0.8) 70%, rgba(255,255,255, 0.7)));
+			background: -ms-linear-gradient(bottom, rgba(255,255,255, 1) 0%, rgba(255,255,255, 0.8) 70%, rgba(255,255,255, 0.7)); /* IE10+ */ 
+			
+			h1{
+				font-size: 20px;
+				line-height: 26px;
+				color: $dark-grey;
+				padding: 15px 20px 5px 20px;
+			}
+		}
 		.image-container{
 			height: 100%; 
 			background-size: contain; 
 			background-position: center;
 			background-repeat: no-repeat;
-			@include wbz-box-pack(end);
-			
-			.headline{
-				@include background(linear-gradient(bottom, rgba(255,255,255, 1), rgba(255,255,255, 0.8) 70%, rgba(255,255,255, 0.7)));
-				background: -ms-linear-gradient(bottom, rgba(255,255,255, 1) 0%, rgba(255,255,255, 0.8) 70%, rgba(255,255,255, 0.7)); /* IE10+ */ 
-				
-				h1{
-					font-size: 20px;
-					line-height: 26px;
-					color: $dark-grey;
-					padding: 15px 20px 5px 20px;
-				}
-			}
 		}
 	}
 	.content{
