--- a/resources/themes/phone/modules/_categories.scss
+++ b/resources/themes/phone/modules/_categories.scss
@@ -93,6 +93,9 @@
 		.headline{
 			@include background(linear-gradient(bottom, rgba(255,255,255, 1), rgba(255,255,255, 0.8) 70%, rgba(255,255,255, 0.7)));
 			background: -ms-linear-gradient(bottom, rgba(255,255,255, 1) 0%, rgba(255,255,255, 0.8) 70%, rgba(255,255,255, 0.7)); /* IE10+ */ 
+			width: 100%;
+			position: absolute;
+			bottom: 0px;
 			
 			h1{
 				font-size: 20px;
@@ -143,20 +146,21 @@
 			.x-innerhtml{
 				padding: 0 50px 0 20px;
 				height: 100%;
+				@include wbz-display-box();
+				@include wbz-box-align(center);
 				
 				> div{
 					@include wbz-box-pack(center);
+					width: 100%;
 				}
-			}
-		}
-		.x-innerhtml{
-			h1{
-				color: $blue;
-				font-size: 16px;
-				white-space: nowrap;
-				text-overflow: ellipsis;
-				overflow: hidden;
-				display: block;
+				h1{
+					color: $blue;
+					font-size: 16px;
+					white-space: nowrap;
+					text-overflow: ellipsis;
+					overflow: hidden;
+					display: block;
+				}
 			}
 		}
 	}
@@ -165,38 +169,56 @@
 			@include wbz-inline-icon(left, 20px);
 			@include wbz-transform(rotate(180deg));
 			background: none;
+			padding: 0;
+			margin: 0;
+			height: 70px;
+			width: 50px;
 			
 			&::before{
 				color: $light-grey;	
+				line-height: 70px;
 			}
 		}
 	}
+	.stats{
+		@include wbz-box-pack(start);
+	}
 	.comments{
-		@include wbz-inline-icon(comment_empty, 18px);
-		color: $light-grey;
-		width: 18px;
-		height: 18px;
+		font-size: 13px;
+		color: $light-grey;	
+		@include wbz-display-inline-box();
+		margin: 0 15px 0 0;
 		
-		&::before{
-			line-heigth: 18px;
-		}
-		span{
-			font-size: 13px;
-			color: $light-grey;	
+		.icon{
+			@include wbz-inline-icon(comment_empty, 20px);
+			color: $light-grey;
+			width: 18px;
+			height: 18px;
+			margin: 0 5px 0 0;
+			
+			&::before{
+				line-height: 18px;
+				position: relative;
+			}
 		}
 	}
 	.ranking{
-		@include wbz-inline-icon(star, 18px);
-		color: $light-grey;
-		width: 18px;
-		height: 18px;
+		font-size: 13px;
+		color: $light-grey;	
+		@include wbz-display-inline-box();
+		margin: 0 15px 0 0;
 		
-		&::before{
-			line-heigth: 18px;
-		}
-		span{
-			font-size: 13px;
-			color: $light-grey;	
+		.icon{
+			@include wbz-inline-icon(star, 20px);
+			color: $light-grey;
+			width: 18px;
+			height: 18px;
+			margin: 0 5px 0 0;
+			
+			&::before{
+				line-height: 18px;
+				position: relative;
+			}
 		}
 	}
 }
