--- a/resources/themes/phone/modules/_categories.scss
+++ b/resources/themes/phone/modules/_categories.scss
@@ -81,7 +81,7 @@
 			height: 100%;
 			@include wbz-box-pack(end);
 			
-			div:first-child{
+			> div:first-child{
 				position: absolute; 
 				left: 0; 
 				top: 0; 
@@ -171,12 +171,12 @@
 			background: none;
 			padding: 0;
 			margin: 0;
-			height: 70px;
+			height: 60px;
 			width: 50px;
 			
 			&::before{
 				color: $light-grey;	
-				line-height: 70px;
+				line-height: 60px;
 			}
 		}
 	}
